ThumbnailGalleryWidget: Fix overlapping caption

--- a/src/Widgets/ThumbnailGalleryWidget/ThumbnailGalleryWidget.scss
+++ b/src/Widgets/ThumbnailGalleryWidget/ThumbnailGalleryWidget.scss
@@ -209,6 +209,8 @@
         line-height: 20px;
         text-align: center;
         margin: 0;
+        position: relative;
+        text-shadow: 0 0 2px black;
       }
     }
 
